Khush/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> declaration
Rule 2     statement -> function_declaration
Rule 3     statement -> function_definition
Rule 4     declaration -> DATATYPE ID SEMICOLON
Rule 5     function_declaration -> DATATYPE ID LPAREN RPAREN SEMICOLON
Rule 6     function_definition -> DATATYPE ID LPAREN RPAREN LBRACE RBRACE

Terminals, with rules where they appear

DATATYPE             : 4 5 6
ID                   : 4 5 6
LBRACE               : 6
LPAREN               : 5 6
RBRACE               : 6
RPAREN               : 5 6
SEMICOLON            : 4 5
error                : 

Nonterminals, with rules where they appear

declaration          : 1
function_declaration : 2
function_definition  : 3
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . declaration
    (2) statement -> . function_declaration
    (3) statement -> . function_definition
    (4) declaration -> . DATATYPE ID SEMICOLON
    (5) function_declaration -> . DATATYPE ID LPAREN RPAREN SEMICOLON
    (6) function_definition -> . DATATYPE ID LPAREN RPAREN LBRACE RBRACE

    DATATYPE        shift and go to state 5

    statement                      shift and go to state 1
    declaration                    shift and go to state 2
    function_declaration           shift and go to state 3
    function_definition            shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (1) statement -> declaration .

    $end            reduce using rule 1 (statement -> declaration .)


state 3

    (2) statement -> function_declaration .

    $end            reduce using rule 2 (statement -> function_declaration .)


state 4

    (3) statement -> function_definition .

    $end            reduce using rule 3 (statement -> function_definition .)


state 5

    (4) declaration -> DATATYPE . ID SEMICOLON
    (5) function_declaration -> DATATYPE . ID LPAREN RPAREN SEMICOLON
    (6) function_definition -> DATATYPE . ID LPAREN RPAREN LBRACE RBRACE

    ID              shift and go to state 6


state 6

    (4) declaration -> DATATYPE ID . SEMICOLON
    (5) function_declaration -> DATATYPE ID . LPAREN RPAREN SEMICOLON
    (6) function_definition -> DATATYPE ID . LPAREN RPAREN LBRACE RBRACE

    SEMICOLON       shift and go to state 7
    LPAREN          shift and go to state 8


state 7

    (4) declaration -> DATATYPE ID SEMICOLON .

    $end            reduce using rule 4 (declaration -> DATATYPE ID SEMICOLON .)


state 8

    (5) function_declaration -> DATATYPE ID LPAREN . RPAREN SEMICOLON
    (6) function_definition -> DATATYPE ID LPAREN . RPAREN LBRACE RBRACE

    RPAREN          shift and go to state 9


state 9

    (5) function_declaration -> DATATYPE ID LPAREN RPAREN . SEMICOLON
    (6) function_definition -> DATATYPE ID LPAREN RPAREN . LBRACE RBRACE

    SEMICOLON       shift and go to state 10
    LBRACE          shift and go to state 11


state 10

    (5) function_declaration -> DATATYPE ID LPAREN RPAREN SEMICOLON .

    $end            reduce using rule 5 (function_declaration -> DATATYPE ID LPAREN RPAREN SEMICOLON .)


state 11

    (6) function_definition -> DATATYPE ID LPAREN RPAREN LBRACE . RBRACE

    RBRACE          shift and go to state 12


state 12

    (6) function_definition -> DATATYPE ID LPAREN RPAREN LBRACE RBRACE .

    $end            reduce using rule 6 (function_definition -> DATATYPE ID LPAREN RPAREN LBRACE RBRACE .)

